--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@data-ui/histogram": "^0.0.78",
+    "async": "^3.2.0",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
