--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ node_modules
 /ml_celery_research/kmeans/
 /ml_celery_research/spark-warehouse/
 /ml_celery_research/dump.rdb
-
-/ml/_checkpoint
+/backend/_checkpoint/
 
 /_checkpoint/
 /receivedBlockMetadata/
